# requestum_test_task

./: .gitignore  Makefile  README.md  default.env  docker-compose.yml  pyproject.toml
src/app/: __main__.py  server.py
src/app/core/: config.py
src/routes/: __init__.py  contributors.py  health_check.py
src/templates/: home.html
