[tool.poetry]
name = "requestum-test-task"
version = "0.1.0"
description = ""
authors = ["artem.svistelnik"]
readme = "README.md"
packages = [{include = "requestum_test_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
uvloop = "^0.19.0"
pydantic-settings = "^2.2.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
requests = "^2.31.0"
black = {extras = ["d"], version = "^24.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
